k8s/stacks/monitor/authentik-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: monitor
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: server
spec:
  type: ExternalName
  externalName: authentik-server.auth.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
